# Debut-Memorizer

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: arena.yaml
docs/: HINT_SYSTEM_DOCUMENTATION.md  TRAINING_SUMMARY_IMPLEMENTATION.md
src/: app.py  arena.py  book.py  engine.py  eval.py  explorer.py  judge.py  utils.py
src/db/: __init__.py  import.py  models.py
src/dmemo/: app.py  arena.py  engine.py  eval.py  explorer.py  protocol.py  utils.py
src/dmemo/db/: crud.py  ingest.py  models.py  session.py
src/dmemo/templates/: index.html
src/templates/: bbc.html  index.html
